# odkcore

./: .gitignore  LICENSE  NEWS  README.md  pyproject.toml
.github/workflows/: code-quality.yml  seed-tests.yml
src/incatools/odk/: activate.jinja2  cli.py  config.py  download.py  helper.py  model.py  setup.py  template.py  util.py
src/incatools/odk/templates/: _dynamic_files.jinja2
src/incatools/odk/templates/src/ontology/: Makefile.jinja2
src/incatools/odk/templates/src/sparql/: equivalent-classes-violation.sparql  illegal-annotation-property-violation.sparql
tests/: test-configs.sh  test_download.py
