[project]
name = "odk-core"
version = "0.1.3"
description = "Ontology Development Kit Core"
license = "BSD-3-Clause"
authors = [
    {name="Damien Goutte-Gattat", email="dgouttegattat@incenp.org"},
    {name="Nicolas Matentzoglu", email="nicolas.matentzoglu@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "dacite",
    "dataclasses-json",
    "dataclasses-jsonschema",
    "defusedxml",
    "jinja2",
    "pyyaml",
    "requests"
]

[project.urls]
Homepage = "http://incatools.github.io/ontology-development-kit"
Repository = "https://github.com/INCATools/odkcore"

[project.scripts]
odk = "incatools.odk.cli:main"
odk-helper = "incatools.odk.helper:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "incatools.odk"
source-include = [
    "NEWS",
    "examples/**",
    "tests/**",
]

[[tool.mypy.overrides]]
module = ["incatools.odk.*"]
follow_untyped_imports = true

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "types-PyYAML",
    "types-defusedxml",
    "types-requests",
]

[project.optional-dependencies]
workflows = [
    "babelon",
    "dosdp",
    "lightrdf",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocs-table-reader-plugin",
    "semsql",
    "sssom",
    "tsvalid",
]
